[package]
name = "color_parser_lib"
version = "0.1.1"
edition = "2024"
description = "A simple hex color parser that supports shorthand and alpha channels"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mr-Unforgettable/color_parser"
keywords = ["color", "hex", "parser"]
categories = ["parsing", "graphics"]
authors = ["abhinavpsingh2024@protonmail.com"]

[lib]
name = "color_parser"
path = "src/lib.rs"

[[bin]]
name = "color_parser_cli"
path = "src/main.rs"

[dependencies]
owo-colors = "4.2.0"
